# Learning-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.md
application-projects/: Cargo.toml
application-projects/easy/project-01-hello-world/: Cargo.toml
language-projects/: Cargo.toml
language-projects/easy/project-01-personal-greeter/: Cargo.toml
language-projects/easy/project-01-personal-greeter/src/: main.rs
language-projects/easy/project-02-math-quiz/: Cargo.toml
language-projects/easy/project-02-math-quiz/src/: main.rs
language-projects/easy/project-03-simple-manipulator/: Cargo.toml
language-projects/easy/project-03-simple-manipulator/src/: main.rs
