# Intermediate directory for application projects - no workspace definition here.

[workspace]
members = [
    "easy/project-*",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
rayon = "1.8"